objects/ASI_NPP_New_Product_Promotion__c.object
<CustomObject>
    <fields>
        <fullName>ASI_APP_FOB_Cost_conversion_to_SGD__c</fullName>
        <formula>ASI_NPP_FOB_Cost_w_o_Duties__c *  ASI_NPP_FOB_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOB Cost - conversion to SGD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_9LC_conversion__c</fullName>
        <formula>IF (ISPICKVAL ( ASI_NPP_Target_Measurement__c , &quot;Bottles&quot;) ,  (ASI_NPP_Forecast_AND_Target__c *  ASI_NPP_Packing_Size_Per_Bottle__c) / 900 ,  IF(ISPICKVAL ( ASI_NPP_Target_Measurement__c , &quot;Actual Case&quot;), (ASI_NPP_Forecast_AND_Target__c * (ASI_NPP_Packing_Size_Per_Bottle__c *  ASI_NPP_No_of_Bottles_Per_Case__c /900)) , ASI_NPP_Forecast_AND_Target__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>9LC conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_A_P_Spending__c</fullName>
        <formula>( 0 -  ASI_NPP_Total_A_P_Expenses__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total A&amp;P</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Ad_hoc_Trading_Term__c</fullName>
        <label>Ad-hoc Trading Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Ad_hoc_trading_Term_Supermarkets__c</fullName>
        <formula>( 0 -  ASI_NPP_Ad_hoc_Trading_Term__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad-hoc trading Term (Supermarkets)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Additional_Trade_Deal_Offer__c</fullName>
        <label>Additional Trade Deal Offer</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Approval_Step_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>wait for approver 1 to approve</description>
        <label>Approval Step 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Approval_Step_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Wait for approver 2 to approve</description>
        <label>Approval Step 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Approval_Step_3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approval Step 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Approved_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approved Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_Promotion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_Promotion1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_Promotion2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_BB_9LC__c</fullName>
        <label>BB /9LC</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Benchmark_CAAP__c</fullName>
        <label>Benchmark - CAAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Benchmark_CM__c</fullName>
        <label>Benchmark- CM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Blind_Bonus__c</fullName>
        <formula>( 0 -  ASI_NPP_Target_Sales__c ) *  ASI_NPP_BB_9LC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blind Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Brand_Company_Allocation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brand Company Allocation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Brand_Company_VAP__c</fullName>
        <label>Cost by Brand Company – VAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Brand_Owner__c</fullName>
        <label>Brand Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MMPJ</fullName>
                </value>
                <value>
                    <fullName>CBL</fullName>
                </value>
                <value>
                    <fullName>PRW</fullName>
                </value>
                <value>
                    <fullName>TAC</fullName>
                </value>
                <value>
                    <fullName>IDL</fullName>
                </value>
                <value>
                    <fullName>PR India</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT</fullName>
                </value>
                <value>
                    <fullName>CHIVAS BROTHERS</fullName>
                </value>
                <value>
                    <fullName>MUMM MARTELL PERRIER JOUET</fullName>
                </value>
                <value>
                    <fullName>PR WINEMAKERS</fullName>
                </value>
                <value>
                    <fullName>PR SPAIN - DOMECQ BODEGAS</fullName>
                </value>
                <value>
                    <fullName>IRISH DISTILLERS</fullName>
                </value>
                <value>
                    <fullName>RICARD</fullName>
                </value>
                <value>
                    <fullName>PERNOD</fullName>
                </value>
                <value>
                    <fullName>PR ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>PR KOREA</fullName>
                </value>
                <value>
                    <fullName>PR USA</fullName>
                </value>
                <value>
                    <fullName>PR MEXICO / CASA PEDRO DOMECQ</fullName>
                </value>
                <value>
                    <fullName>HAVANA CLUB INTL</fullName>
                </value>
                <value>
                    <fullName>PRODUCTA</fullName>
                </value>
                <value>
                    <fullName>Black Forest Distillers</fullName>
                </value>
                <value>
                    <fullName>Lillet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_MFM_Brand__c</referenceTo>
        <relationshipName>ASI_NPP_New_Products_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_CAAP_Indicators__c</fullName>
        <label>CAAP Indicators</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_CAAP_Per_Litre__c</fullName>
        <label>CAAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_CAAP__c</fullName>
        <label>CAAP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anis</fullName>
                </value>
                <value>
                    <fullName>Champagne</fullName>
                </value>
                <value>
                    <fullName>Cognac</fullName>
                </value>
                <value>
                    <fullName>Gin</fullName>
                </value>
                <value>
                    <fullName>Liqueur</fullName>
                </value>
                <value>
                    <fullName>Rum</fullName>
                </value>
                <value>
                    <fullName>Tequila</fullName>
                </value>
                <value>
                    <fullName>Vodka</fullName>
                </value>
                <value>
                    <fullName>Whisky - Blended Scotch</fullName>
                </value>
                <value>
                    <fullName>Whisky - Boutique Malt</fullName>
                </value>
                <value>
                    <fullName>Whisky - Irish</fullName>
                </value>
                <value>
                    <fullName>Whisky - Single Malt</fullName>
                </value>
                <value>
                    <fullName>Sparkling Wine</fullName>
                </value>
                <value>
                    <fullName>Wine - Australian</fullName>
                </value>
                <value>
                    <fullName>Wine - New Zealand</fullName>
                </value>
                <value>
                    <fullName>Wine - French</fullName>
                </value>
                <value>
                    <fullName>Wine - Spanish</fullName>
                </value>
                <value>
                    <fullName>Wine - Italian</fullName>
                </value>
                <value>
                    <fullName>Wine - Chilean</fullName>
                </value>
                <value>
                    <fullName>Wine - Argentinian</fullName>
                </value>
                <value>
                    <fullName>Wine - USA</fullName>
                </value>
                <value>
                    <fullName>Wine - Other Imported</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>CPS</fullName>
                </value>
                <value>
                    <fullName>MOT</fullName>
                </value>
                <value>
                    <fullName>Offtrade</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>TOT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Competition_Brands__c</fullName>
        <label>Competition Brands</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Consumer_A_P__c</fullName>
        <formula>ASI_NPP_Product_Launch__c + ASI_NPP_Event__c + ASI_NPP_Sponsorship__c + ASI_NPP_Special_Shipping_Handling__c +  ASI_NPP_Special_Packing__c +  ASI_NPP_Others_please_indicate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumer A&amp;P:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Consumer_Price_From__c</fullName>
        <label>Consumer Price (RSP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Consumer_Price_To__c</fullName>
        <label>Consumer Price (To)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Contract_Margin_9LC__c</fullName>
        <formula>IF(OR( ASI_NPP_Saler_to_On_Trade_Offtrade_RSP_P__c =0,ASI_NPP_Saler_to_On_Trade_Offtrade_RSP_P__c&gt; ASI_NPP_PRS_to_Saler_Offtrade_Proposed__c ),0,(ASI_NPP_PRS_to_Saler_Offtrade_Proposed__c -ASI_NPP_Saler_to_On_Trade_Offtrade_RSP_P__c + ASI_NPP_Wholesaler_Margin__c )* ASI_NPP_No_of_Bottles_Per_Case__c *900/( ASI_NPP_Packing_Size_Per_Bottle__c * ASI_NPP_No_of_Bottles_Per_Case__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Margin / 9LC</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Contract_Margin__c</fullName>
        <formula>( 0 -  ASI_NPP_Target_Sales__c ) *  ASI_NPP_Contract_Margin_9LC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Margin(Incl of WS Margin Given)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Contribution_Margin_Indicators__c</fullName>
        <label>Contribution Margin Indicators</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Contribution_Margin_Per_Litre__c</fullName>
        <label>Contribution Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Contribution_Margin__c</fullName>
        <label>Contribution Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Delivery_ETA_Date_in_SGP__c</fullName>
        <label>Delivery ETA Date in SGP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Dist_Costs_per_bottle__c</fullName>
        <label>Distribution Costs (per bottle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Dist_to_Trade_Current__c</fullName>
        <label>Distributor to Trade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Dist_to_Trade_Proposed__c</fullName>
        <label>Distributor to Trade - Proposed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Distribution_9LC__c</fullName>
        <formula>IF(OR( ISPICKVAL (ASI_NPP_Sub_Brand_Type__c, &quot;Innovation&quot;),ISPICKVAL (ASI_NPP_Sub_Brand_Type__c, &quot;Sub-Brands&quot;)), ASI_NPP_Selling_Price_9LC__c * (1.75 /100) ,  ASI_NPP_Distribution_L__c *9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution / 9LC</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>On Trade</fullName>
                </value>
                <value>
                    <fullName>On Trade - Hotel</fullName>
                </value>
                <value>
                    <fullName>On Trade - Restaurant</fullName>
                </value>
                <value>
                    <fullName>On Trade - MOT</fullName>
                </value>
                <value>
                    <fullName>On Trade - TOT</fullName>
                </value>
                <value>
                    <fullName>Offtrade</fullName>
                </value>
                <value>
                    <fullName>Offtrade - Supermarket</fullName>
                </value>
                <value>
                    <fullName>Offtrade - Wine Shop</fullName>
                </value>
                <value>
                    <fullName>CPS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Distribution_Cost__c</fullName>
        <description>20170510 CR to change distribution cost based on Distribution Cost per bottle entered</description>
        <formula>/*( 0 -  ASI_NPP_9LC_conversion__c ) *  ASI_NPP_Distribution_9LC__c*/
-1 * (ASI_NPP_9LC_conversion__c*900/ASI_NPP_Packing_Size_Per_Bottle__c)*ASI_NPP_Dist_Costs_per_bottle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Distribution_L__c</fullName>
        <label>Distribution /L</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Duration__c</fullName>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 month</fullName>
                </value>
                <value>
                    <fullName>2 months</fullName>
                </value>
                <value>
                    <fullName>3 months</fullName>
                </value>
                <value>
                    <fullName>4 months</fullName>
                </value>
                <value>
                    <fullName>On-going</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Duties_9LC__c</fullName>
        <formula>88 *  ASI_NPP_Percentage_of_Alcohol__c * 9</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duties / 9LC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Duties__c</fullName>
        <description>20170510 CR to change duties based on Duties per bottle entered</description>
        <formula>/*( 0 -  ASI_NPP_9LC_conversion__c ) *  ASI_NPP_Duties_9LC__c*/
-1 * (ASI_NPP_9LC_conversion__c*900/ASI_NPP_Packing_Size_Per_Bottle__c)*ASI_NPP_Duties_per_bottle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Duties_per_bottle__c</fullName>
        <label>Duties (per bottle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Event__c</fullName>
        <label>- Event</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Ex_Rate_To_Report_Curr__c</fullName>
        <label>Ex Rate To Report Curr</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Excise_Tax__c</fullName>
        <formula>-1 * (ASI_NPP_9LC_conversion__c*900/ASI_NPP_Packing_Size_Per_Bottle__c)*ASI_NPP_Excise_Tax_per_bottle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Excise Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Excise_Tax_per_bottle__c</fullName>
        <label>Excise Tax (per bottle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_FOB_Cost__c</fullName>
        <description>20170510 CR to change FOB to be always in market currency</description>
        <formula>/*( 0 - ASI_NPP_9LC_conversion__c ) *  ASI_NPP_IGC_9LC__c*/
-1 * (ASI_NPP_9LC_conversion__c*900/ASI_NPP_Packing_Size_Per_Bottle__c)*ASI_NPP_FOB_Cost_w_o_Duties__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOB Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_FOB_Cost_w_o_Duties__c</fullName>
        <label>FOB Cost - w/o Duties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_FOB_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>AOA</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AMD</fullName>
                </value>
                <value>
                    <fullName>AZN</fullName>
                </value>
                <value>
                    <fullName>BYR</fullName>
                </value>
                <value>
                    <fullName>BAM</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>HRK</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>DOP</fullName>
                </value>
                <value>
                    <fullName>FJD</fullName>
                </value>
                <value>
                    <fullName>GEL</fullName>
                </value>
                <value>
                    <fullName>GHS</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>IDR </fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_FOB_Exchange_Rate__c</fullName>
        <label>Exchange Rate to SGD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_FOC_Ratio_PNL__c</fullName>
        <formula>IF( ASI_NPP_Target_Sales__c = 0, 0,  ASI_NPP_Free_Goods__c / ASI_NPP_Target_Sales__c * 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOC Ratio:</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_FOC_Ratio__c</fullName>
        <formula>( ASI_NPP_Trade_Deal_Offer_Current__c +  ASI_NPP_Additional_Trade_Deal_Offer__c ) / ASI_NPP_No_of_Bottles_Per_Case__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOC Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>FY1314</fullName>
                </value>
                <value>
                    <fullName>FY1415</fullName>
                </value>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
                <value>
                    <fullName>FY2021</fullName>
                </value>
                <value>
                    <fullName>FY2122</fullName>
                </value>
                <value>
                    <fullName>FY2223</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Forecast_AND_Target__c</fullName>
        <label>NPA Annual Target Forecast (Include FOC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Free_Goods_Selling__c</fullName>
        <formula>(0-ASI_NPP_Free_Goods__c) *  ASI_NPP_Selling_Price_9LC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Goods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Free_Goods__c</fullName>
        <formula>( ASI_NPP_9LC_conversion__c *  ASI_NPP_FOC_Ratio__c ) / (12 + ASI_NPP_FOC_Ratio__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Goods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Gross_Sales__c</fullName>
        <formula>ASI_NPP_9LC_conversion__c*  ASI_NPP_Selling_Price_9LC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Handling_9LC__c</fullName>
        <formula>IF(OR( ISPICKVAL (ASI_NPP_Sub_Brand_Type__c, &quot;Innovation&quot;),ISPICKVAL (ASI_NPP_Sub_Brand_Type__c, &quot;Sub-Brands&quot;)), ASI_NPP_Selling_Price_9LC__c * (1.25 /100) , ASI_NPP_Handling_L__c *9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Handling / 9LC</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Handling_Cost__c</fullName>
        <description>20170510 CR to change handling cost based on Handling Cost per bottle entered</description>
        <formula>/*( 0 - ( ASI_NPP_Handling_9LC__c +  ASI_NPP_Insurance_9LC__c )) *  ASI_NPP_9LC_conversion__c*/
-1 * (ASI_NPP_9LC_conversion__c*900/ASI_NPP_Packing_Size_Per_Bottle__c)*ASI_NPP_Handling_Costs_per_bottle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Handling Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Handling_Costs_per_bottle__c</fullName>
        <label>Handling Costs (per bottle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Handling_L__c</fullName>
        <label>Handling/L</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_IGC_9LC__c</fullName>
        <formula>ASI_APP_FOB_Cost_conversion_to_SGD__c *  ASI_NPP_No_of_Bottles_Per_Case__c * (900/( ASI_NPP_Packing_Size_Per_Bottle__c * ASI_NPP_No_of_Bottles_Per_Case__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IGC / 9LC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Importer_to_Dist_Current__c</fullName>
        <label>Importer to Distributor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Importer_to_Dist_Proposed__c</fullName>
        <label>Importer to Distributor - Proposed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Initial_Requested_Quantity__c</fullName>
        <label>Initial Requested Quantity (Actual)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Insurance_9LC__c</fullName>
        <formula>( ASI_NPP_IGC_9LC__c + ASI_NPP_Handling_9LC__c ) * 0.002 * 1.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurance / 9LC</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Launch_Date__c</fullName>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Local__c</fullName>
        <label>Cost Produced Locally</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_MCF_PO__c</fullName>
        <label>MCF PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Market_Currency__c</fullName>
        <label>Market Currency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_NPP_Market__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Wholesaler Channel</fullName>
                </value>
                <value>
                    <fullName>Cambodia Duty Paid</fullName>
                </value>
                <value>
                    <fullName>Philippine Duty Free</fullName>
                </value>
                <value>
                    <fullName>Philippine Duty Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Media_Total_Formula__c</fullName>
        <formula>-1 * ASI_NPP_Media_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Media_Total__c</fullName>
        <label>Media (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_NPL_Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Net_Sales_Per_Litre__c</fullName>
        <label>Net Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Net_Sales__c</fullName>
        <label>Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_New_Product_Assessment_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Product Assessment Form Check</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>